# bazel_python_pytest

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements_lock.txt
test/: test_testlib.py
testlib/: __init__.py  dummy.py
