module(
    name = "test_bazel_python_module",
    version = "0.0.0",
)

# bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    # configure_coverage_tool = True,
    # Only set when you have mulitple toolchain versions.
    # is_default = True,
    python_version = "3.11",
)

# python_register_toolchain()

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")

# py_repositories()
